# ponder

./: .gitignore  Cargo.toml  README.md
scripts/: install-local.sh
src/: cli.rs  client.rs  config.rs  main.rs  tools.rs  ui.rs
